K8s/OKE+Cilium/argocd/l7-policy-by-headers.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "argocd-l7-policy-by-headers"
  namespace: argocd
spec:
  description: "L7 policy to restrict access by source IP address"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: argocd-server
  ingress:
    - fromEndpoints: 
        - matchExpressions:
          - key: reserved:ingress
            operator: Exists  
      toPorts:
        - rules:
            http:
              - headers:
                  - 'X-Envoy-External-Address: 37.228.206.180'
